<resources>
    <string name="app_name">FinSimple</string>
    <string name="main_welcomeString">Bienvenido. Ingrese a la aplicación mediante alguno de los siguientes métodos</string>
    <string name="main_loginButton">Iniciar sesión</string>
    <string name="main_registerButton">Registrarse</string>
    <string name="background_percentage_symbol">%</string>
    <string name="background_dollar_symbol">$</string>
    <string name="login_title_text">Inicio de sesión</string>
    <string name="company_name_text">Correo electrónico</string>
    <string name="password_text">Contraseña</string>
    <string name="register_text_action">¿No tienes una cuenta? Registrate ahora</string>
    <string name="register_text">Registro</string>
    <string name="type_company_name_text">Nombre de la empresa</string>
    <string name="email_text">Correo electrónico</string>
    <string name="type_RUC_text">RUC de la empresa</string>
    <string name="password_register_text">Contraseña (8 caracteres mínimo)</string>
    <string name="nav_home_text">Billetera</string>
    <string name="nav_user_text">Usuario</string>
    <string name="nav_exit_text">Salir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_app">¿Deseas salir de la aplicación?</string>
    <string name="exit_app_button_text">Salir</string>
    <string name="greetings_user">Hola, bienvenido de nuevo</string>
    <string name="no_bills_text_description">Todo parece correcto, no hay ningún documento pendiente</string>
    <string name="add_bill_button_text">Añadir nueva letra</string>
    <string name="create_bill_text_description">Añadir una nueva letra</string>
    <string name="create_bill_button_text">Crear letra</string>
    <string name="type_bill_title_text_description">Ingrese el título de la letra</string>
    <string name="type_description_text_text">Ingrese una breve descripción de la letra</string>
    <string name="bill_creation_text_text">Fecha de emisión</string>
    <string name="bill_creation_date_hint">Emisión</string>
    <string name="bill_due_date_text_text">Fecha de vencimiento</string>
    <string name="bill_due_date_hint">Vencimiento</string>
    <string name="bill_creation_discounted_days_text_text">Fecha de descuento</string>
    <string name="nominal_value_text_text">Valor nominal</string>
    <string name="sol_pen_symbol">S/</string>
    <string name="select_bank_text_text">Seleccion uno de los siguientes bancos</string>
    <string name="autocomplete_info_using_bank_text_text">¿Desea que la información sea autocompletada según su banco elegido?</string>
    <string name="toogle_yes">Sí</string>
    <string name="toogle_no">No</string>
    <string name="tea_text_text">Tasa Efectiva Anual (TEA)</string>
    <string name="degravamen_text">Porcentaje del seguro desgravamen</string>
    <string name="retention_text">Porcentaje de la retención asignada</string>
    <string name="discount_date_text">Fecha de descuento</string>
    <string name="discount_date_hint">Descuento</string>
    <string name="discounted_date_text_text">Descuento</string>
    <string name="bill_information_text">Detalles de letra</string>
    <string name="delete_bill_text">Eliminar</string>
    <string name="update_bill_text">Editar</string>
    <string name="bill_details_information_text">Detalles de letra</string>
    <string name="b_i_t_1">Título</string>
    <string name="b_i_t_2">Descripción</string>
    <string name="b_i_t_3">Fecha de emisión</string>
    <string name="b_i_t_4">Fecha de vencimiento</string>
    <string name="bit_5">Fecha de descuento</string>
    <string name="bit_6">Valor nominal</string>
    <string name="bit_7">Detalles de Banco</string>
    <string name="bit_8">Nombre</string>
    <string name="bit_9">Tasa Efectiva Anual</string>
    <string name="bit_10">Seguro de desgravamen</string>
    <string name="bit_11">Retención</string>
    <string name="bit_12">Resultados</string>
    <string name="bit_13">Tasa Efectiva del Periodo</string>
    <string name="bit_14">Periodo</string>
    <string name="bit_15">Tasa Descontada</string>
    <string name="bit_16">Valor Neto</string>
    <string name="bit_17">Valor Recibido</string>
    <string name="bit_18">Valor Entregado</string>
    <string name="bit_19">Tasa de Costo Efectivo Anual (TCEA)</string>
    <string name="bit_20">¿Estás seguro que deseas eliminar esta letra? No podrás deshacer el proceso después </string>
    <string name="bit_21">Cancelar</string>
    <string name="bit_22">Eliminar</string>
    <string name="bit_23">Perfil</string>
    <string name="bit_24">En esta sección puede revisar su perfil de cuenta y otros ajustes adicionales</string>
    <string name="bit_25">Perfil</string>
    <string name="bit_26">Editar perfil</string>
    <string name="bit_27">Cerrar sesión</string>
    <string name="bit_28">Información</string>
    <string name="bit_29">Nombre de la compañía</string>
    <string name="bit_30">Correo electrónico</string>
    <string name="bit_31">RUC</string>
    <string name="bit_32">Editar</string>
    <string name="bit_33">Revise los datos ingresados y seleccione aquellos datos que necesita actualizar</string>
    <string name="bit_34">Editar nombre de compañía</string>
    <string name="bit_35">Editar correo electrónico</string>
    <string name="bit_36">Editar RUC</string>
    <string name="bit_37">Cancelar</string>
    <string name="bit_38">Guardar</string>
</resources>