<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.wallet.edition.CreateUpdateBillFragment">

    <View
        android:id="@+id/create_bill_holder"
        android:layout_width="394dp"
        android:layout_height="698dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_rectangle_shape"
        android:backgroundTint="@color/light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/create_bill_scroll"
        android:layout_width="371dp"
        android:layout_height="665dp"
        app:layout_constraintBottom_toBottomOf="@+id/create_bill_holder"
        app:layout_constraintEnd_toEndOf="@+id/create_bill_holder"
        app:layout_constraintStart_toStartOf="@+id/create_bill_holder"
        app:layout_constraintTop_toTopOf="@+id/create_bill_holder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/create_or_update_bill_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/create_bill_text_description"
                    android:textColor="@color/yellowish"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/create_bill_back_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/create_bill_back_button"
                    android:layout_width="59dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="1dp"
                    android:src="@drawable/back_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/type_bill_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/type_bill_title_text_description"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_bill_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/lighty_green"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/type_bill_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/type_description_text_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText_bill_description"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/lighty_green"
                android:ems="10"
                android:inputType="text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/bill_creation_date_text"
                    android:layout_width="167dp"
                    android:layout_height="21dp"
                    android:text="@string/bill_creation_text_text"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_bill_created_date"
                    android:layout_width="167dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/lighty_green"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/bill_creation_date_hint"
                    android:inputType="date"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bill_creation_date_text" />

                <TextView
                    android:id="@+id/bill_due_date_text"
                    android:layout_width="166dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="1dp"
                    android:text="@string/bill_due_date_text_text"
                    android:textColor="@color/brown"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_bill_due_date"
                    android:layout_width="167dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/lighty_green"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/bill_due_date_hint"
                    android:inputType="date"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bill_due_date_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/discounted_days_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bill_creation_discounted_days_text_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_discounted_days"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/lighty_green"
                android:ems="10"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/discounted_date_text_text"
                android:inputType="number" />

            <TextView
                android:id="@+id/text_nominal_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nominal_value_text_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edit_text_nominal_value"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="2dp"
                    android:background="@color/lighty_green"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toEndOf="@+id/text_view_sol_symbol"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_sol_symbol"
                    android:layout_width="30dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/sol_pen_symbol"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/select_bank_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/select_bank_text_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_banks"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/lighty_green" />

            <TextView
                android:id="@+id/autocomplete_info_using_bank_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/autocomplete_info_using_bank_text_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_group_use_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_use_bank_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:text="@string/toogle_yes" />

                <RadioButton
                    android:id="@+id/radio_use_bank_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toogle_no" />
            </RadioGroup>

            <TextView
                android:id="@+id/tea_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tea_text_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="29dp"
                    android:layout_height="38dp"
                    android:text="@string/background_percentage_symbol"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/edit_text_tea"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_tea"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:background="@color/lighty_green"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/degravamen_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/degravamen_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="28dp"
                    android:layout_height="41dp"
                    android:text="@string/background_percentage_symbol"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/edit_text_desgravamen"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_desgravamen"
                    android:layout_width="150dp"
                    android:layout_height="39dp"
                    android:background="@color/lighty_green"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/retention_text"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="28dp"
                    android:layout_height="37dp"
                    android:text="@string/background_percentage_symbol"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/edit_text_retention"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_retention"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:background="@color/lighty_green"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="0dp">

                <Button
                    android:id="@+id/create_or_update_bill_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/create_bill_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>