<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fancy_blue"
    tools:context=".lobby.subject.MainActivity" >

    <TextView
        android:id="@+id/deco_background"
        android:layout_width="230dp"
        android:layout_height="312dp"
        android:layout_marginStart="4dp"
        android:rotation="125"
        android:text="%"
        android:textColor="@color/dark_green"
        android:textSize="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/another_deco_background"
        android:layout_width="230dp"
        android:layout_height="312dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="516dp"
        android:rotation="125"
        android:text="@string/background_dollar_symbol"
        android:textColor="@color/dark_green"
        android:textSize="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fin_simple_logo" />

    <TextView
        android:id="@+id/main_welcomeText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/main_welcomeString"
        android:textAlignment="center"
        android:textColor="@color/yellowish"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <Button
        android:id="@+id/main_loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_loginButton"
        android:textSize="24sp"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_welcomeText" />

    <Button
        android:id="@+id/main_registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/main_registerButton"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:backgroundTint="@color/yellowish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>